# spherical_wrist_delta

./: CMakeLists.txt  README.md  Startnodo.sh  acelerometro.ino  package.xml  subswithinterva.sh
Acelerometro/: README.md  acelerometro.ino
Ejecutables/: README.md  extract_rosbag_data.py  imu_and_motor_positions.bag  imu_and_motor_positions.csv  imu_and_motor_positions.xlsx  imu_and_motor_positions2.bag  imu_and_motor_positions2.csv  plot_data.py  start_control_imu_and_record.sh  start_control_topic_and_recod.sh  subswithinterval.sh  ~$imu_and_motor_positions.xlsx
Memoria/: README
Planos/: README
launch/: wrist_orientation.launch
src/: ControlImu.cpp  ControlTopic.cpp  wrist_orientation.cpp
