<?xml version="1.0"?>
<package format="2">
  <name>wrist_control</name>
  <version>0.0.0</version>
  <description>The wrist_control package controls wrist orientation using Dynamixel motors.</description>

  <maintainer email="ordavidro@gmail.com">ordavidro</maintainer>
  <license>MIT</license> <!-- Cambia esto según corresponda -->

  <url type="website">http://wiki.ros.org/wrist_control</url>

  <!-- Dependencias de construcción -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamixel_ros_library</build_depend>
  <build_depend>dynamixel_workbench_controllers</build_depend>
  <build_depend>dynamixel_workbench_msgs</build_depend>
  <build_depend>dynamixel_workbench_operators</build_depend>
  <build_depend>dynamixel_workbench_toolbox</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencias de ejecución -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dynamixel_ros_library</exec_depend>
  <exec_depend>dynamixel_workbench_controllers</exec_depend>
  <exec_depend>dynamixel_workbench_msgs</exec_depend>
  <exec_depend>dynamixel_workbench_operators</exec_depend>
  <exec_depend>dynamixel_workbench_toolbox</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- Otros detalles que puedan ser solicitados -->
  </export>
</package>
